--- a/demo/package.json
+++ b/demo/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port 3200",
+    "dev": "vite --port 3300 --host",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -24,7 +24,7 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^4.3.2",
+    "typescript": "^4.5.2",
     "vite": "2.6.14"
   }
 }
