--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
     "lint": "pretty-quick --staged",
+    "lint:full": "eslint packages/*/src",
     "release": "yarn build && yarn changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
@@ -67,32 +68,32 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/addon-storysource": "^6.3.12",
     "@storybook/react": "^6.3.12",
-    "@testing-library/cypress": "^7.0.6",
+    "@testing-library/cypress": "^8.0.2",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "all-contributors-cli": "^6.20.0",
     "babel-eslint": "^10.1.0",
     "cypress": "6.9.1",
-    "eslint": "^7.28.0",
+    "eslint": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.3.1",
-    "pretty-quick": "^3.1.0",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "start-server-and-test": "^1.12.5",
-    "tsd": "^0.17.0",
-    "typescript": "4.3.2"
+    "tsd": "^0.19.0",
+    "typescript": "4.5.2"
   },
   "prettier": {
     "semi": false,
