--- a/demo/package.json
+++ b/demo/package.json
@@ -3,28 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3300 --host",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.3",
-    "@react-three/drei": "^6.1.2",
-    "@react-three/fiber": "^7.0.1",
-    "@stitches/react": "0.2.0",
+    "@react-three/drei": "^7.22.4",
+    "@react-three/fiber": "^7.0.19",
+    "@stitches/react": "1.2.5",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-use": "^17.2.4",
-    "three": "^0.129.0",
-    "wouter": "^2.7.4"
+    "react-use": "^17.3.1",
+    "three": "^0.134.0",
+    "wouter": "^2.7.5"
   },
   "devDependencies": {
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7",
-    "@vitejs/plugin-react-refresh": "^1.3.3",
-    "typescript": "^4.3.2",
-    "vite": "2.0.5"
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "typescript": "^4.5.2",
+    "vite": "2.6.14"
   }
 }
