--- a/demo/package.json
+++ b/demo/package.json
@@ -8,14 +8,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@leva-ui/plugin-bezier": "*",
+    "@leva-ui/plugin-plot": "*",
+    "@leva-ui/plugin-spring": "*",
     "@radix-ui/react-icons": "^1.0.3",
     "@react-three/drei": "^7.22.4",
     "@react-three/fiber": "^7.0.19",
     "@stitches/react": "1.2.5",
+    "@use-gesture/react": "^10.1.6",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-use": "^17.3.1",
     "three": "^0.134.0",
     "wouter": "^2.7.5"
