--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -13,8 +13,8 @@
   "bugs": "https://github.com/pmndrs/leva/issues",
   "preconstruct": {
     "entrypoints": [
-      "index.ts",
-      "plugin/index.ts"
+      "./index.ts",
+      "./plugin/index.ts"
     ]
   },
   "peerDependencies": {
@@ -25,7 +25,7 @@
     "@radix-ui/react-portal": "^0.1.1",
     "@radix-ui/react-tooltip": "0.1.1",
     "@stitches/react": "1.2.5",
-    "@use-gesture/react": "^10.1.5",
+    "@use-gesture/react": "^10.1.6",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "colord": "^2.9.1",
     "dequal": "^2.0.2",
