--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "typescript": "4.5.2"
   },
   "prettier": {
+    "bracketSameLine": true,
     "semi": false,
     "trailingComma": "es5",
     "singleQuote": true,
