--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,12 @@ jobs:
       - name: Check types
         run: yarn tsc
 
+      - name: Check formatting
+        run: yarn prettier
+
+      - name: Lint files
+        run: yarn lint:full
+
       - uses: actions/cache@v2
         name: Setup Yarn build cache
         id: yarn-build-cache
