--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "demo:build": "yarn workspace demo build",
     "demo:serve": "yarn workspace demo serve",
     "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier --check ."
   },
   "size-limit": [
     {
