--- a/package.json
+++ b/package.json
@@ -97,10 +97,10 @@
     "typescript": "4.5.2"
   },
   "prettier": {
+    "bracketSameLine": true,
     "semi": false,
     "trailingComma": "es5",
     "singleQuote": true,
-    "jsxBracketSameLine": true,
     "tabWidth": 2,
     "printWidth": 120
   }
