--- a/demo/package.json
+++ b/demo/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-icons": "^1.0.3",
     "@react-three/drei": "^8.8.3",
     "@react-three/fiber": "^7.0.26",
-    "@stitches/react": "1.2.6",
+    "@stitches/react": "^1.2.8",
     "@use-gesture/react": "^10.2.5",
     "leva": "*",
     "noisejs": "^2.1.0",
@@ -29,7 +29,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.3",
     "vite": "2.7.13"
   }
 }
