--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,9 @@
     "strict": true                            /* Enable all strict type-checking options. */,
     "noUnusedLocals": true,                   /* Report errors on unused locals. */
     "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "./",                          /* Base directory to resolve non-absolute module names. */
+    "baseUrl": ".",                           /* Base directory to resolve non-absolute module names. */
     "allowSyntheticDefaultImports": true      /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
     "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "preserveSymlinks": true                  /* Do not resolve the real path of symlinks. */,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
   }
