--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,15 @@ name: CI
 on:
   push:
     paths:
-      - '.github/**'
+      - '.github/workflows/main.yml'
       - 'packages/**'
       - 'package.json'
-      - 'yarn.lock'
+      - 'pnpm-lock.yaml'
       - '!demo/**'
-      - '!docs/**'
       - '!**.md'
       - '!.changeset/**'
+env:
+  CI: true
 jobs:
   build:
     name: Build, lint, and test
@@ -22,41 +23,39 @@ jobs:
       - name: Use Node
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      - name: Install pnpm
+        run: npm i pnpm@latest -g
 
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-
 
-      - name: Install dependencies
-        run: yarn --silent
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.9.1
+          run_install: true
 
       - name: Check types
-        run: yarn tsc
+        run: pnpm tsc
 
-      - name: Check formatting
-        run: yarn prettier
-
-      - name: Lint files
-        run: yarn lint:full
-
-      - uses: actions/cache@v2
-        name: Setup Yarn build cache
-        id: yarn-build-cache
+      - name: Setup build cache
+        uses: actions/cache@v2
+        id: build-cache
         with:
           path: packages/**/dist
-          key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/') }}
+          key: ${{ runner.os }}-build-${{ hashFiles('packages/') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-build-
+            ${{ runner.os }}-build-
 
-      - name: Yarn build without cache
-        if: steps.yarn-build-cache.outputs.cache-hit != 'true'
-        run: yarn build
+      - name: Build without cache
+        if: steps.build-cache.outputs.cache-hit != 'true'
+        run: pnpm build
+
+      - name: Run tests
+        run: pnpm test
