--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -33,7 +33,7 @@
     "react-colorful": "^5.5.1",
     "react-dropzone": "^12.0.0",
     "v8n": "^1.3.3",
-    "zustand": "^3.6.9"
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.0",
