--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ci:release": "yarn build && yarn changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
-    "size": "yarn size-limit",
+    "size": "yarn build && size-limit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook --quiet",
     "cypress:open": "cypress open",
@@ -45,6 +45,11 @@
       "name": "Leva Plugin Spring",
       "limit": "3s",
       "path": "packages/plugin-spring/dist/leva-ui-plugin-spring.*.prod.js"
+    },
+    {
+      "name": "Leva Plugin Dates",
+      "limit": "3s",
+      "path": "packages/plugin-dates/dist/leva-ui-plugin-dates.*.prod.js"
     }
   ],
   "repository": {
@@ -65,6 +70,7 @@
     "@emotion/react": "^11.7.1",
     "@preconstruct/cli": "^2.1.5",
     "@radix-ui/react-icons": "^1.0.3",
+    "@size-limit/preset-big-lib": "^8.1.0",
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
@@ -93,6 +99,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "size-limit": "^8.1.0",
     "start-server-and-test": "^1.14.0",
     "tsd": "^0.19.1",
     "typescript": "4.5.5"
