--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -22,8 +22,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@radix-ui/react-portal": "^0.1.3",
-    "@radix-ui/react-tooltip": "0.1.6",
+    "@radix-ui/react-portal": "^1.0.1",
+    "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "1.2.8",
     "@use-gesture/react": "^10.2.5",
     "colord": "^2.9.2",
