--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,5 @@ jobs:
         if: steps.yarn-build-cache.outputs.cache-hit != 'true'
         run: yarn build
 
-      - name: Cypress run
-        run: yarn ci:test
+      # - name: Cypress run
+      #   run: yarn ci:test
