--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "all-contributors-cli": "^6.20.0",
     "eslint": "^8.8.0",
     "eslint-config-react-app": "^7.0.0",
